# py-scraper

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/news_scraper/domain/: __init__.py  aggregates.py  constants.py  entities.py  enums.py  exceptions.py  value_objects.py
src/news_scraper/ports/: __init__.py  scraper_port.py  storage_port.py  ui_port.py
